--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,10 @@
 .hideScroll::-webkit-scrollbar {
     display: none;
 }
+  .background-animate {
+    background-size: 400%;
 
+    -webkit-animation: AnimationName 3s ease infinite;
+    -moz-animation: AnimationName 3s ease infinite;
+    animation: AnimationName 3s ease infinite;
+  }
