Update about us

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,6 @@
 
 .hideScroll::-webkit-scrollbar {
     display: none;
-}
-
-
-.react-datetime-picker__calendar{
-    border-radius: 5rem;
-}
-.react-datetime-picker__wrapper{
-    border-radius: 5rem;
+      -ms-overflow-style: none;
+    scrollbar-width: none;
 }
