--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,6 @@
       -ms-overflow-style: none;
     scrollbar-width: none;
 }
-input[type="text"]{
-    border: none;
-    outline: none;
-}
 
 #bookingDate > div{
     @apply border-none
@@ -20,19 +16,14 @@ input[type="text"]{
     @apply !bg-background
 }
 
-
-
 #bookingDate .react-datetime-picker__inputGroup__input:invalid{
     @apply bg-background
 }
 
-#bookingDate button:enabled:hover, button:enabled:focus {
+#bookingDate button:enabled:is(:hover,:focus) {
     @apply bg-default-200/25
 }
-#bookingDate button:enabled:focus {
-    @apply bg-default-200/50
-}
-#bookingDate  button{
+#bookingDate button{
     border-radius: 6px;
 }
 #bookingDate .react-calendar__tile--hasActive{
@@ -47,12 +38,9 @@ input[type="text"]{
     @apply bg-default
 }
 
-#bookingDate > div > div > select > option{
+#bookingDate select option{
     @apply bg-default
 }
-#bookingDate > div > div > select option:is(:checked){
+#bookingDate select option:is(:checked){
     @apply bg-default-200
-}
-#bookingDate > div > div > select option::selection{
-    @apply bg-default-200/25
 }
